2012-11-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_color_name):  If the expression term in
	`linecolor rgb <expression>` is not interpretable as a color name or 
	hexadecimal string "#AARRGGBB" then treat it as an integer representing
	AARRGGBB.

2012-11-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics):  Axis tic labels provided by the user as string
	constants were arbitrarily truncated to MAX_ID_LEN before printing.
	No truncation is necessary.
	Bug #3585182

2012-11-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (gprintf): Ever since the gprintf routine was added
	(sometime before version 3.7) the count parameter that should limit how
	many characters are written on output has been silently ignored.
	Obviously this can lead to buffer overflows, the simplest case being a
	format consisting of a string constant with length > MAX_ID_LEN.
	Revise gprintf() to use snprintf() and safe_strncpy() throughout.
	Bug #3577439

2012-11-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp src/qtterminal/QtGnuplotScene.cpp
	src/qtterminal/QtGnuplotWidget.cpp:  Fix mouse tracking and resize
	events for persistent qt windows.

2012-10-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_reset_after_error) src/parse.h src/util.c:
	Error exit from inside try_to_get_string() left the internal flag for
	string parsing in an incorrect state.  Provide a reset routine.
	Example of original bug:	stats file"
					print 1+2
					       ^ ';' expected

2012-10-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c: Fix a coding error, (sizeof((char *)buf) rather than
	(strlen((char *)buf)), that can cause a buffer overrun on 64-bit
	machines.  Found by valgrind.

2012-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c: Save axis scaling for 3D 'set view map' plots so
	that outboard drivers can continue mousing in -persist mode.
