@@ -9,6 +9,7 @@ New features, changes and fixes since gnuplot version 4.6.1
 * FIX reset parsing state after error in parsing string input
 * FIX qt terminal mouse tracking and resize events for persistent plots
 * FIX buffer overflow from very long tic label formats
+* FIX broken handling of formatted input via 'using 1:2 "<format>"'
 
 
 New features, changes and fixes in gnuplot version 4.6.1
